fix: font render on steps on mobile

--- a/front/src/App.css
+++ b/front/src/App.css
@@ -172,6 +172,7 @@ tbody tr:last-of-type {
   width: 10px;
   height: 10px;
   margin-bottom: 1px;
+  font-size: 0.8em;
 }
 
 @media (min-width: 801px) {
